# dotfiles

./: .Xresources  .bashrc  .fehbg  .gitattributes  .gitconfig  .gitignore  .gitmodules  .ideavimrc  .stow-local-ignore  .vimrc  .xbindkeysrc  .xinitrc  LICENSE  README.md  TODO.txt  install  install.sh  lib.sh  setup  setup.sh
.config/Xresources/themes/catppuccin/: mocha.Xresources
.config/alacritty/: alacritty.toml  alacritty.yml
.config/alacritty/themes/: custom.toml  custom.yaml
.config/autorandr/: .gitignore
.config/autorandr/home/: config  setup
.config/autorandr/laptop/: config  setup
.config/autorandr/mirror/: config  setup
.config/autorandr/postswitch.d/: notification  set-keyboard  wallpaper
.config/awesome/: .luarc.json  rc.lua
.config/bash/: .bash_aliases  .bash_prompt  alias  bash_aliases  bash_prompt  prompt
.config/dunst/: dunstrc
.config/fontconfig/: fonts.conf
.config/git/: config  ugent
.config/kitty/: kitty.conf
.config/nvim/: .editorconfig  .luarc.json  README.md  init.lua  lazy-lock.json
.config/nvim/after/ftplugin/: go.lua  lua.lua  markdown.lua
.config/nvim/ftdetect/: c_headers.lua
.config/nvim/ftplugin/: markdown.lua
.config/nvim/lsp/: bashls.lua  clangd.lua  cssls.lua  gopls.lua  hls.lua  html.lua  lua_ls.lua  pyright.lua  taplo.lua  ts_ls.lua  ty.lua  vue_ls.lua
.config/nvim/lua/: lazy-setup.lua  packer.lua
.config/nvim/lua/config/: autopairs.lua  bufferline.lua  cmp.lua  colorcolumn.lua  colorscheme.lua  comment.lua  icons.lua  keymaps.lua  lualine.lua  nvim-tree.lua  options.lua  plugins.lua  telescope.lua  toggleterm.lua  treesitter.lua
.config/nvim/lua/config/lsp/: handlers.lua  init.lua  lspconfig.lua  mason.lua  mason.lua.old  native.lua
.config/nvim/lua/config/statusline/: init.lua  navic.lua
.config/nvim/lua/core/: autocmd.lua  autocmds.lua  colorscheme.lua  diagnostics.lua  init.lua  keymap.lua  lsp.lua  options.lua  statusline.lua
.config/nvim/lua/core/lsp/: autoformatting.lua  document_highlight.lua  format_on_save.lua  handlers.lua  highlight.lua  init.lua  inlay_hints.lua  keymaps.lua  util.lua
.config/nvim/lua/helpers/: icons.lua  spinner.lua  utils.lua
.config/nvim/lua/plugins/: bufferline.lua  buffers.lua  cmp.lua  colorcolumn.lua  colorscheme.lua  colorschemes.lua  comment.lua  completion.lua  debug.lua  debugger.lua  file-explorer.lua  file_explorer.lua  filetree.lua  git.lua  hardtime.lua  init.lua  latex.lua  lsp.lua  notify.lua  nvim-tree.lua  oil.lua  picker.lua  presence.lua  startscreen.lua  statusline.lua  tabline.lua  telescope.lua  theme.lua  treesitter.lua  ui.lua
.config/nvim/lua/plugins-config/: cmp.lua  init.lua
.config/nvim/lua/plugins-config/lsp/: lspconfig.lua  mason.lua
.config/nvim/lua/plugins/config/: alpha.lua  autopairs.lua  bufferline.lua  buffers.lua  cmp.lua  colorizer.lua  comment.lua  copilot.lua  deadcolumn.lua  dressing.lua  gitsigns.lua  lazy.lua  navic.lua  notify.lua  nvim-tree.lua  presence.lua  telescope.lua  todo.lua  treesitter-textobjects.lua  treesitter.lua
.config/nvim/lua/plugins/dap/: go.lua  util.lua
.config/nvim/lua/plugins/lsp/: handlers.lua  init.lua  lspconfig.lua  mason.lua
.config/nvim/lua/plugins/treesitter/: start.lua
.config/nvim/lua/plugins/treesitter-modules/: textobjects.lua
.config/nvim/lua/util/: icons.lua  init.lua  spinner.lua  tcp.lua
.config/nvim/plugin/: floatterm.lua  packer_compiled.lua
.config/nvim/queries/gotmpl/: injections.scm
.config/paru/: paru.conf
.config/rofi/: config.rasi
.config/xmobar/: stack.yaml  xmobar.sh  xmobarrc  xmobarrc.cabal
.config/xmobar/lib/: Colors.hs
.config/xmobar/lib/Bars/: Default.hs  MainBar.hs
.config/xmobar/src/: xmobarrc.hs
.config/xmonad/: build  cabal.project  myXmonad.cabal  stack.yaml  xmobar-system.hs  xmobar.hs  xmonad.hs
.config/xmonad/lib/: Colors.hs  Defaults.hs  KeyBinds.hs  Utils.hs  XPConfig.hs
.config/xmonad/lib/Bars/: Default.hs  MainBar.hs  SystemStatus.hs
.config/xmonad/lib/ColorTheme/: CatpuccinMocha.hs
.config/xmonad/lib/Hooks/: Event.hs  Layout.hs  Log.hs  Manage.hs  Startup.hs
.config/xmonad/lib/Utils/: Font.hs  Utils.hs
.config/xmonad/lib/XMobar/: Monitors.hs  PrettyPrinter.hs
.config/xmonad/lib/XMobar/Bars/: Default.hs  MainBar.hs  SystemStatus.hs
.config/xmonad/lib/XMobar/Monitors/: ArchUpdates.hs
.config/xmonad/test/: Test.hs  UtilsTest.hs
.git-crypt/keys/default/0/: BAD8EEF58E5E1999B64E57142E4C22E7FFC1AE00.gpg
.gnupg/: gpg-agent.conf
.local/share/rofi/themes/: catppuccin-frappe.rasi  catppuccin-latte.rasi  catppuccin-macchiato.rasi  catppuccin-mocha.rasi  launcher.rasi
bash/: .bash_aliases  .bash_prompt  .bashrc
docs/arch_linux/: stremio.md
docs/arch_linux/install_guide/: 00_install_guide.md  10_post_install.md  20_graphical_environment.md  30_applications.md  30_configuration.md
docs/void_linux/: full_disk_encryption.md  network_connection.md
etc/: crontab.txt  packages.txt  packages_paru.txt  required.txt  unlock-conservation-mode.service
etc/sudoers/: ideapad
install.d/: autorandr.sh  bash.sh  feh.sh  font.sh  git.sh  gnupg.sh  notifications.sh  nvim.sh  paru.sh  slock.sh  st.sh  utils.sh  vim.sh  x11.sh
nvim/: init.lua
nvim/lua/config/: cmp.lua  colorscheme.lua  discord.lua  gitsigns.lua  icons.lua  keymaps.lua  nvim-tree.lua  options.lua  plugins.lua  presence.lua  treesitter.lua
nvim/lua/config/lsp/: handlers.lua  init.lua  lsp-installer.lua  lsp-signature.lua  mason.lua  null-ls.lua
nvim/plugin/: packer_compiled.lua
scripts/: network-portscan.txt  scripts  toggle-conservation-mode
scripts/passw-gen/: passw-gen  password-generator.py
setup/: fonts.sh
setup-scripts/: ensure-dirs.sh  fonts.sh  paru.sh  spicetify_themes.sh  stow.sh
(+49 files in other folders)
