cabal-version:  2.4
name:           myXmonad
version:        0.1.0.0
build-type:     Simple

library
    hs-source-dirs:     lib
    build-depends:      base, xmobar
    exposed-modules:    Utils, Colors, Bars.MainBar, Bars.SystemStatus
    other-modules:      Bars.Default

executable xmonad
    main-is:            xmonad.hs
    hs-source-dirs:     ., lib
    ghc-options:        -Wall -rtsopts -threaded -with-rtsopts=-N
    build-depends:
        base ^>=4.16.4.0,
        xmonad, xmonad-contrib,
        data-default-class,
        X11,
        containers
    default-language:   Haskell2010
    other-modules:      Utils

executable xmobar
    main-is:            xmobar.hs
    hs-source-dirs:     ., lib
    ghc-options:        -O2 -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints -rtsopts -threaded -with-rtsopts=-N
    default-language:   Haskell2010
    build-depends:      base, xmobar
    other-modules:      Bars.Default, Colors, Bars.SystemStatus, Bars.MainBar

test-suite myXmonad-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-depends:      base, myXmonad, hspec
    other-modules:      UtilsTest
