cabal-version: 2.4
name:          myXmonad
version:       0.1.0.0
build-type:    Simple

library
    hs-source-dirs:     lib
    build-depends:
        , base
        , containers
        , data-default-class
        , X11
        , xmobar
        , xmonad
        , xmonad-contrib

    default-language:   GHC2021
    default-extensions: ImportQualifiedPost
    exposed-modules:
        Colors
        Defaults
        Hooks.Event
        Hooks.Layout
        Hooks.Log
        Hooks.Manage
        Hooks.Startup
        KeyBinds
        Utils.Utils
        Utils.Font
        XMobar.Bars.MainBar
        XMobar.Bars.SystemStatus
        XMobar.PrettyPrinter
        XMobar.Monitors
        XPConfig

    other-modules:      XMobar.Bars.Default

executable xmonad
    main-is:            xmonad.hs
    hs-source-dirs:     . lib
    ghc-options:        -Wall -rtsopts -threaded -with-rtsopts=-N
    build-depends:
        , base
        , containers
        , data-default-class
        , X11
        , xmonad
        , xmonad-contrib

    default-language:   GHC2021
    default-extensions: ImportQualifiedPost
    other-modules:
        Colors
        Defaults
        Hooks.Event
        Hooks.Layout
        Hooks.Log
        Hooks.Manage
        Hooks.Startup
        KeyBinds
        Utils.Utils
        Utils.Font
        XMobar.PrettyPrinter
        XPConfig

executable xmobar
    main-is:            xmobar.hs
    hs-source-dirs:     . lib
    ghc-options:
        -O2 -Wall -Wcompat -Wincomplete-record-updates
        -Wredundant-constraints -rtsopts -threaded -with-rtsopts=-N

    default-language:   GHC2021
    default-extensions: ImportQualifiedPost
    build-depends:
        , base
        , xmobar

    other-modules:
        Colors
        Defaults
        XMobar.Bars.Default
        XMobar.Bars.MainBar
        XMobar.Bars.SystemStatus
        XMobar.Monitors
        Utils.Font

test-suite myXmonad-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        , base
        , hspec
        , myXmonad

    other-modules:    UtilsTest
